[gd_scene load_steps=31 format=3 uid="uid://c4d183i5t76i2"]

[ext_resource type="Script" path="res://rune_book/rune_book.gd" id="1_vep1a"]
[ext_resource type="Script" path="res://rune_book/rune.gd" id="2_1k8ss"]
[ext_resource type="Resource" uid="uid://dnll1dncrly5h" path="res://rune_book/resources/bident.tres" id="3_jsj61"]
[ext_resource type="Resource" uid="uid://c6c13x3h2ilon" path="res://rune_book/resources/bismuth.tres" id="4_j4ktq"]
[ext_resource type="Resource" uid="uid://wmex7uw4sa1k" path="res://rune_book/resources/brimstone.tres" id="5_t4wti"]
[ext_resource type="Resource" uid="uid://c5q8la20qtwnl" path="res://rune_book/resources/crucible.tres" id="6_3h36n"]
[ext_resource type="Resource" uid="uid://cnu032exj670a" path="res://rune_book/resources/fire.tres" id="7_nwl4n"]
[ext_resource type="Resource" uid="uid://dh6tl0b303n1u" path="res://rune_book/resources/phlogiston.tres" id="8_gltcr"]
[ext_resource type="Resource" uid="uid://uiurst1rs53i" path="res://rune_book/resources/silver.tres" id="9_8fhd1"]
[ext_resource type="Texture2D" uid="uid://d133oq0e7688x" path="res://rune_book/textures/bident.png" id="10_5nxli"]
[ext_resource type="PackedScene" uid="uid://soc1hdsdd18s" path="res://rune_book/scenes/page.tscn" id="10_cumjc"]
[ext_resource type="Texture2D" uid="uid://cg5fp1hxvcs2" path="res://rune_book/textures/brimstone.png" id="11_pqii8"]
[ext_resource type="Texture2D" uid="uid://bdto7q7gjmnka" path="res://rune_book/textures/crucible.png" id="12_tv28g"]
[ext_resource type="Texture2D" uid="uid://bc82bki187fvg" path="res://rune_book/textures/fire.png" id="13_4chb2"]
[ext_resource type="Texture2D" uid="uid://y42gd68y7nds" path="res://rune_book/textures/phlogiston.png" id="14_6xija"]
[ext_resource type="Material" uid="uid://ccmioh5nfsc2n" path="res://rune_book/materials/page_material.tres" id="15_kyniu"]
[ext_resource type="Shader" uid="uid://c2d0sajhsiy0r" path="res://rune_book/resources/flame_shader.tres" id="17_6idph"]
[ext_resource type="AudioStream" uid="uid://be86m1quddh8s" path="res://rune_book/RuneSelect.wav" id="18_3k48n"]

[sub_resource type="Gradient" id="Gradient_wk4u6"]
offsets = PackedFloat32Array(0.107143, 0.761905, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5gcde"]
gradient = SubResource("Gradient_wk4u6")
fill_to = Vector2(0, 0.489474)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8jjip"]
noise_type = 0
frequency = 0.0271
fractal_octaves = 3
fractal_lacunarity = 5.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_swkv3"]
width = 128
height = 32
generate_mipmaps = false
seamless = true
noise = SubResource("FastNoiseLite_8jjip")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5rw0q"]
render_priority = 0
shader = ExtResource("17_6idph")
shader_parameter/albedo = Color(0.4, 0, 0.0666668, 0)
shader_parameter/point_size = 1.0
shader_parameter/time_scale = 0.1
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_gradient = SubResource("GradientTexture2D_5gcde")
shader_parameter/texture_noise = SubResource("NoiseTexture2D_swkv3")

[sub_resource type="CylinderMesh" id="CylinderMesh_qg6dg"]
material = SubResource("ShaderMaterial_5rw0q")
top_radius = 3.0
bottom_radius = 1.0
height = 1.0
radial_segments = 16
cap_top = false
cap_bottom = false

[sub_resource type="Gradient" id="Gradient_ol145"]
offsets = PackedFloat32Array(0, 0.595238, 1)
colors = PackedColorArray(0.592157, 0.345098, 0.207843, 1, 0.31, 0.20956, 0.1426, 1, 0.27, 0.18576, 0.1404, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l1jhr"]
frequency = 0.0447

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s1pyt"]
width = 32
height = 32
seamless = true
color_ramp = SubResource("Gradient_ol145")
noise = SubResource("FastNoiseLite_l1jhr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_44dbe"]
albedo_texture = SubResource("NoiseTexture2D_s1pyt")
metallic_specular = 0.0
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_hkhim"]
material = SubResource("StandardMaterial3D_44dbe")
size = Vector3(1, 0.1, 1.3)

[sub_resource type="BoxMesh" id="BoxMesh_eor6s"]
material = ExtResource("15_kyniu")
size = Vector3(0.9, 0.1, 1.2)

[node name="RuneBook" type="Node3D" node_paths=PackedStringArray("desired_ui")]
script = ExtResource("1_vep1a")
runes = Array[ExtResource("2_1k8ss")]([ExtResource("3_jsj61"), ExtResource("4_j4ktq"), ExtResource("5_t4wti"), ExtResource("6_3h36n"), ExtResource("7_nwl4n"), ExtResource("8_gltcr"), ExtResource("9_8fhd1")])
page_scene = ExtResource("10_cumjc")
desired_ui = [NodePath("DesiredContainer/TextureRect"), NodePath("DesiredContainer/TextureRect2"), NodePath("DesiredContainer/TextureRect3"), NodePath("DesiredContainer/TextureRect4"), NodePath("DesiredContainer/TextureRect5")]
deactivated_color = Color(0.27, 0.0162, 0.0162, 1)
activated_color = Color(0.76, 0.182527, 0.0228, 1)

[node name="DesiredContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 66.0
offset_bottom = 98.0
grow_horizontal = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="DesiredContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("10_5nxli")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="DesiredContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("11_pqii8")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="DesiredContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("12_tv28g")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="DesiredContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("13_4chb2")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="DesiredContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("14_6xija")
expand_mode = 2

[node name="Glow" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.443444, 0.635918, 5.79807)
mesh = SubResource("CylinderMesh_qg6dg")

[node name="Book" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.28746)

[node name="BackCover" type="MeshInstance3D" parent="Book"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0770763, 0.615156)
mesh = SubResource("BoxMesh_hkhim")

[node name="BackPages" type="MeshInstance3D" parent="Book/BackCover"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0759972, 0)
mesh = SubResource("BoxMesh_eor6s")
skeleton = NodePath("../..")

[node name="FrontCoverPivot" type="Node3D" parent="Book/BackCover"]
transform = Transform3D(0.997054, 0.076719, 0, -0.076719, 0.997054, 0, 0, 0, 1, 0.449915, 0.126124, 0.0515819)

[node name="FrontCover" type="MeshInstance3D" parent="Book/BackCover/FrontCoverPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.448947, 0.138534, -0.0515819)
mesh = SubResource("BoxMesh_hkhim")
skeleton = NodePath("../../..")

[node name="Pages" type="MeshInstance3D" parent="Book/BackCover/FrontCoverPivot/FrontCover"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0884067, 0)
mesh = SubResource("BoxMesh_eor6s")
skeleton = NodePath("../../../..")

[node name="Page" parent="Book/BackCover/FrontCoverPivot/FrontCover/Pages" instance=ExtResource("10_cumjc")]
transform = Transform3D(0.999824, -0.0187441, 0, 0.0187441, 0.999824, 0, 0, 0, 1, 0.44776, -0.0588222, 0)

[node name="RuneSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_3k48n")
